--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "llamaindex": "0.0.34",
     "lucide-react": "^0.263.1",
     "next": "13.5.3",
+    "openai": "^4.73.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
